---------------------------------------------------------------------------------------------------
Version: 4.1.14
Date: 2022.01.XX
  Bugfixes:
    - Fixed that the output of solid water -> solid steam recipes was multiplied with the
      sluid/fluid ratio aswell
---------------------------------------------------------------------------------------------------
Version: 4.1.13
Date: 2022.01.17
  Bugfixes:
    - Fixed that recipes which had both fluid and non-stackable items as ingredients/results could
      cause a crash
---------------------------------------------------------------------------------------------------
Version: 4.1.12
Date: 2022.01.07
  Bugfixes:
    - Fixed a crash with angels petrochem and omnimatter compression caused by temperature-less
      sluid versions of items not being registered in rare cases
---------------------------------------------------------------------------------------------------
Version: 4.1.11
Date: 2022.01.04
  Changes:
    - Added omni.fluid.add_multi_temp_recipe(recipename) to mark recipes which require a copy with
      sluids for each available temperature in the orginal min/max range of the fluid
    - Added omni.fluid.add_mining_fluid(fluidname) to register mining fluid manually that
      require a solid -> fluid conversion recipe
    - Conversion recipes for fluids with temperatures higher than the highest boilers target
      temperature are now only added to the highest boiler instead of to all boilers
  Bugfixes:
    - Fixed that hidden void recipes were not converted into a sluid version
    - If a void recipe for a sluid with multiple temperatures exists, create a void recipe for
      each temperature
    - Fixed that the mining fluid required for PY`s multi fluid input drills / pumpjacks were not
      excluded from conversion
    - Fixed that the function parsing fluid amounts for the GCD calculation used the wrong rounding