@@ -4,6 +4,7 @@ Date: 2022.01.XX
   Bugfixes:
     - Fixed that the output of solid water -> solid steam recipes was multiplied with the
       sluid/fluid ratio aswell
+    - Hide old fluid boiler items
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.13
 Date: 2022.01.17
